# FARD_v0.5

./: .gitignore  ANNOUNCEMENT.md  ANNOUNCEMENT_META.json  Cargo.toml  Cargo.toml.bak_20260201_193755  FARD-EBNF.md  Makefile  README.md  SPEC.md  SPEC_META.json  cargo  fard_gate.toml  fard_gate.toml.bak  fard_gate.toml.bak_lockrel_fix2  fardrun  install.sh  main.fard  run_demo.sh
.cargo/: config.toml
Formula/: fard.rb
_run_qmark_ok_unwrap/: digests.json  module_graph.json  trace.ndjson
_run_sum_list/: digests.json  module_graph.json  result.json  trace.ndjson
_syntax_probe/: _lex_match.fard  concat.fard  lambda.fard  match.fard  method.fard
crates/abirunner/: Cargo.toml
crates/abirunner/src/: lib.rs  main.rs  run.rs
crates/abirunner/tests/: registry_roundtrip.rs  vector0_abi.rs  vectorA_abi.rs  vectorB_missing_fact_precedence.rs
crates/abirunner/tests/fixtures/vector0/bundle/: effects.json  input.json
crates/abirunner/tests/fixtures/vectorA/bundle/: effects.json  program.json
crates/abirunner/tests/fixtures/vectorB_missing_fact/bundle/: imports.json
crates/fardlang/: Cargo.toml
crates/fardlang/src/: algebra.rs  ast.rs  canon.rs  check.rs  desugar.rs  effects.rs  eval.rs  lex.rs  lib.rs  parse.rs
crates/fardlang/tests/: algebra_laws.rs  builtins_smoke.rs  canon_list_invariant.rs  canon_smoke.rs  concat_eval_smoke.rs  concat_parse_smoke.rs  depth_limit.rs  effects_uses.rs  eval_infix_ops.rs  eval_record_smoke.rs  eval_smoke.rs  lex_ops_smoke.rs  list_literal.rs  match_eval_smoke.rs  match_parse_smoke.rs  match_tier1_demos.rs  operators_smoke.rs  parse_infix_smoke.rs  parse_smoke.rs  record_parse_smoke.rs  show_canon.rs
crates/fardlang/tests/corpus/: features.fard
crates/inherit_cert_crdt/: Cargo.toml
crates/inherit_cert_crdt/src/: lib.rs
examples/: color_quant.fard  kitchen_sink_v0_5.fard
lib/: zproof.fard
ontology/: stdlib_surface.v1_0.ontology.json  stdlib_surface.v1_0.ontology.schema.json
out_bad/: error.json  module_graph.json  trace.ndjson
playground/: index.jsx
receipts/: sha256_19e2be3c4cf9397550e1a7bbca3e97e5c194a9abf20b95630f2bc9a43ef62245.json  sha256_35bf5b626e96f53efb90278e9be03253ba0baf5e6d217888d7bb767d770d6933.json  sha256_689dede59eba8a533083040a4795f539a1c860c9de6cc229691f62a1399b078a.json  sha256_a529b4565ffd38b5410f2146ecf93c3c057483c85413e2fded007b47543fd9d7.json
spec/: artifact_graph_v0_1_0.md  ontology_surface_v0_5_m4.json  stdlib_surface.v1_0.ontology.json  stdlib_surface_tables.v1_0.ontology.json  trace_v0_1_0.md  verified_stack_v0.manifest.json
src/: builtin_pipe_v1.rs  builtin_sig.rs  builtin_sig_table_v1.rs  builtin_std.rs  digest.rs  lib.rs  lib.rs.bak  main.rs
std/: rec.fard
tests/: _m6_harness.rs.inc  _m6_json.rs.inc  gate_collapse_chess_z.sh  gate_mathematical_proof_system.sh  intent_bytes_json_roundtrip.rs  intent_png_red_1x1_bytes.rs  intent_repo_no_prompt_corruption_junk.rs  intent_tranche_v0_5_g48_g53.rs  intent_tranche_v0_5_g54_g60.rs  intent_tranche_v0_5_g61_g65.rs  intent_tranche_v0_5_g66_g70.rs  intent_tranche_v0_5_g71_g75.rs  intent_tranche_v0_5_g78_g84.rs  intent_tranche_v0_5_list_sum_gate.rs  intent_tranche_v0_5_m1_result_algebra.rs  intent_tranche_v0_5_m1_result_boundary_err_vs_failure.rs  intent_tranche_v0_5_m1_result_closure.rs  intent_tranche_v0_5_m1_result_laws_andthen.rs  intent_tranche_v0_5_m1_result_laws_match_equiv.rs  intent_tranche_v0_5_m1_result_laws_qmark_equiv.rs  intent_tranche_v0_5_m1_result_reject_invalid_shape.rs  intent_tranche_v0_5_m1_result_shape_total.rs  intent_tranche_v0_5_m2_pattern_closure.rs  intent_tranche_v0_5_m2_trace_boundary.rs  intent_tranche_v0_5_m2_trace_canon.rs  intent_tranche_v0_5_m2_trace_closure.rs  intent_tranche_v0_5_m2_trace_ordering.rs  intent_tranche_v0_5_m2_trace_schema_gate.rs  intent_tranche_v0_5_m2_trace_shape.rs  intent_tranche_v0_5_m2_trace_vocab.rs  intent_tranche_v0_5_m3_artifact_causality_gate.rs  intent_tranche_v0_5_m3_artifact_graph_bad_edge.rs  intent_tranche_v0_5_m3_artifact_graph_extra_newline.rs  intent_tranche_v0_5_m3_artifact_graph_missing.rs  (+103 more)
(+309 files in other folders)
