[package]
name = "fard_v0_5_language_gate"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
ed25519-dalek = "2.0"
valuecore = { path = "crates/valuecore" }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3.25.0"

[workspace]
members = [
  "crates/valuecore",
  "crates/witnesscore",
  "crates/abirunner",
  "crates/registry",
  "crates/fardc",
  "crates/fardlang",
  "crates/fardcli",
]
