[package]
name = "fard_v0_5_language_gate"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
base64 = "0.21"
csv = "1"
rayon = "1"
ed25519-dalek = "2.0"
valuecore = { path = "crates/valuecore" }
fardlang = { path = "crates/fardlang" }
ureq = { version = "2" }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3.25.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[workspace]
members = [
  "crates/valuecore",
  "crates/witnesscore",
  "crates/abirunner",
  "crates/registry",
  "crates/fardc",
  "crates/fardlang",
  "crates/fardcli",
]
