[package]
name = "abirunner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
sha2 = "0.10"
valuecore = { path = "../valuecore" }
witnesscore = { path = "../witnesscore" }

[dev-dependencies]
registry = { path = "../registry" }
pretty_assertions = "1"

[[bin]]
name = "abirun"
path = "src/main.rs"
