[package]
name = "fardlang"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
anyhow = "1"
hkdf = "0.12"
chacha20poly1305 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
signature = "2"
nalgebra = { version = "0.33", features = ["std"] }

valuecore = { path = "../valuecore" }

[[test]]
name = "match_parse_smoke"
path = "tests/match_parse_smoke.rs"
