[package]
name = "inherit_cert_crdt"
version = "1.6.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
proptest = { version = "1", optional = true }

[features]
default = []
test_support = ["proptest"]

[dev-dependencies]
proptest = "1"
